
(Mark Diggory)
 - [DS-100] XMLUI OpenURL support contributed by the National Evolutionary Synthesis Center (NESCent) and @mire.
 - [DS-93]  Upgrade XMLUI to Cocoon 2.2
 - [DS-117] File uploads >=100KB lead to an error in the xmlui
 - [DS-154] Make a backup of the config dir on Ant update
 - [DS-155] Maven war plugin changes cause war to include libraries as well
 
(Mark Wood)
 - [DS-2] [2002866] Return 404, not 200, when page Not Found
 - [DS-150] [2025998] Usage event (statistics) plugin hook
 - [DS-143] [2620307] 'ant init_configs' copies wrong dspace.cfg
 - [DS-41] Small JSP cleanups

(Mark Wood / Andrea Bollini)
- [DS-43] Manakin RSS feed generator cache timeout can't be adjusted - ID: 2593393

(Stuart Lewis)
 - [DS-4] [2057231] Refactor LDAPServlet to use Stackable Authentication
 - Enable ldap.login.specialgroup special group for all LDAP users
 - [DS-5] Fix for SF bug [2164955] DSpace1.5.1(XML) problem with Login to restricted bitstreams
 - [DS-6] Fix for SF bug [2343281] XHTML Head Dissimination Crosswalk exposes provenance info
 - [DS-7] Fix for SF bug [1896225] HTML tags not stripped in statistics display
 - [DS-8] Fix for SF bug [1951859] DSpace Home link style in breadcrumb trail
 - [DS-9] Fix for SF bug [1730606] Restricted Items metadata exposed via OAI
 - [DS-10] Patch for SF feature request [1587270] Implicit group for all registered users
 - [DS-11] Fix for SF bug [2495728] 'My Account' disappears following exports
 - Update XMLUI Google Analytics code to match latest tracking code
 - [DS-12] Fix for SF bug [1606439] Exception handling for deleting a metadata field
 - [DS-13] [2513300] Fix for bug [1774958] Nested folders do not export correctly
 - [DS-14] Fix for SF bug [2086481] xmlui Administrative log in as another eperson
 - [DS-152] Fix for SF bug [2155479] Submission verify page handles dc.identifier.* incorrectly
 - [DS-60] netid.toLowerCase() in different classes and methods - ID: 2458187